# whisper-dc

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
whisper_dc/: pipeline.py
