[project]
name = "whisper-dc"
version = "0.2.0"
description = ""
authors = [
{ name = "dzkb", email = "1517445+dzkb@users.noreply.github.com" }
]
license = "MIT"
readme = "README.md"

[project.scripts]
whisper-dc = "whisper_dc.pipeline:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
discord = "^2.3.2"
ruff = "^0.4.1"
python-dotenv = "^1.2.1"
pywhispercpp = "^1.4.1"
soundfile = "^0.13.1"
llvmlite = "^0.46.0"
librosa = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 